z-index fix in id checker

--- a/assets/scss/app/new/_idcheck.scss
+++ b/assets/scss/app/new/_idcheck.scss
@@ -41,6 +41,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 100;
 }
 
 .idcheck-image-expand-button {
